--- a/frontend/Phukien.html
+++ b/frontend/Phukien.html
@@ -691,7 +691,7 @@
                   <img
                     src="${backendBaseURL}/${product.image}"
                     alt="${product.name}"
-                    class="mt-2 rounded-xl max-h-40 object-contain product-image over:scale-105 transition-transform duration-200"
+                    class="mt-2 rounded-xl max-h-40 object-contain product-image hover:scale-110 transition-transform duration-200"
                     data-id="${product.id}"
                     data-name="${product.name}"
                     data-price="${product.price}"
