--- a/frontend/iPhone.html
+++ b/frontend/iPhone.html
@@ -905,7 +905,7 @@
                   : `<p>${Number(product.price).toLocaleString('vi-VN')}₫</p>`;
 
                 const productHtml = `
-                  <div class="relative rounded-2xl bg-[#e7f1ec] p-4 cursor-pointer">
+                  <div class="relative rounded-2xl bg-[#FEE2E2] p-4 cursor-pointer">
                     <img src="${imageUrl}" alt="${product.name}" data-id="${product.id}" class="mt-2 rounded-xl product-image hover:scale-105 transition-transform duration-200" />
                     <h3 class="font-semibold text-sm mb-1">${product.name}</h3>
                     <div class="flex justify-center space-x-1 mb-2">
