--- a/frontend/trangchu.html
+++ b/frontend/trangchu.html
@@ -297,7 +297,7 @@
           <!-- Hai ảnh nhỏ bên phải -->
           <div class="flex flex-col gap-6">
             <div class="relative flex-1 overflow-hidden rounded-xl">
-              <a href="iPad.html">
+              <a href="tintuc2.html">
                 <img src="Image/iPadM3M4.jpg" alt="iPad" class="w-full h-full object-cover rounded-xl">
                 <div class="absolute bottom-3 left-3 text-white text-sm font-semibold bg-black/50 px-2 py-1 rounded-md">
                   iPad Air M3 và iPad A16 – Sản Phẩm Apple Mới Nhất 2025
@@ -306,7 +306,7 @@
             </div>
 
             <div class="relative flex-1 overflow-hidden rounded-xl">
-              <a href="Mac.html#MacBookAir">
+              <a href="tintuc3.html">
                 <img src="Image/Air.jpeg" alt="MacBook" class="w-full h-full object-cover rounded-xl">
                 <div class="absolute bottom-3 left-3 text-white text-sm font-semibold bg-black/50 px-2 py-1 rounded-md">
                   MacBook Air M3 – Sản Phẩm Apple Mới Nhất 2025
