--- a/frontend/dangky.html
+++ b/frontend/dangky.html
@@ -16,19 +16,19 @@
     <div id="messageBox" class="hidden mb-4 text-center text-lg font-medium"></div>
 
     <form id="registerForm" class="space-y-5" enctype="multipart/form-data" novalidate>
-      <input id="fullname" type="text" placeholder="Họ tên *" required class="w-full px-4 py-3 border rounded-xl" />
-      <input id="username" type="text" placeholder="Tên đăng nhập *" required class="w-full px-4 py-3 border rounded-xl" />
+      <input id="fullname" type="text" placeholder="Họ tên *" required class="w-full px-4 py-3 border rounded-xl text-black" />
+      <input id="username" type="text" placeholder="Tên đăng nhập *" required class="w-full px-4 py-3 border rounded-xl text-black" />
       <div class="grid grid-cols-2 gap-4">
-        <input id="password" type="password" placeholder="Mật khẩu *" required class="px-4 py-3 border rounded-xl w-full" />
-        <input id="confirmPassword" type="password" placeholder="Xác nhận mật khẩu *" required class="px-4 py-3 border rounded-xl w-full" />
+        <input id="password" type="password" placeholder="Mật khẩu *" required class="px-4 py-3 border rounded-xl w-full text-black" />
+        <input id="confirmPassword" type="password" placeholder="Xác nhận mật khẩu *" required class="px-4 py-3 border rounded-xl w-full text-black" />
       </div>
       <div class="flex gap-6 items-center">
         <label><input type="radio" name="gender" value="Nam" checked /> Nam</label>
         <label><input type="radio" name="gender" value="Nữ" /> Nữ</label>
       </div>
-      <input id="email" type="email" placeholder="Email *" required class="w-full px-4 py-3 border rounded-xl" />
-      <input id="phone" type="tel" placeholder="Số điện thoại *" required class="w-full px-4 py-3 border rounded-xl" />
-      <input id="address" type="text" placeholder="Địa chỉ" class="w-full px-4 py-3 border rounded-xl" />
+      <input id="email" type="email" placeholder="Email *" required class="w-full px-4 py-3 border rounded-xl text-black" />
+      <input id="phone" type="tel" placeholder="Số điện thoại *" required class="w-full px-4 py-3 border rounded-xl text-black" />
+      <input id="address" type="text" placeholder="Địa chỉ" class="w-full px-4 py-3 border rounded-xl text-black" />
       <input id="avatar" name="avatar" type="file" accept="image/*" class="text-white" />
       <label class="inline-flex items-start mt-2 text-sm">
         <input id="terms" type="checkbox" required class="mr-2 mt-1" />
