--- a/frontend/Giaitri.html
+++ b/frontend/Giaitri.html
@@ -41,7 +41,7 @@
         <li><a class="hover:underline" href="Main.html">Cửa Hàng</a></li>
         <li class="relative group">
           <a class="hover:underline cursor-pointer" href="Mac.html">Mac</a>
-          <ul class="absolute left-0 mt-2 hidden group-hover:flex flex-col bg-white border rounded-md shadow-md text-black w-40 z-10 transition-all duration-200">
+          <ul class="absolute left-0 hidden group-hover:flex flex-col bg-white border rounded-md shadow-md text-black w-40 z-10 transition-all duration-200">
             <li><a href="Mac.html#MacbookAir" class="block px-4 py-2 hover:bg-gray-100">Macbook Air</a></li>
             <li><a href="Mac.html#MacbookPro" class="block px-4 py-2 hover:bg-gray-100">Macbook Pro</a></li>
           </ul> 
@@ -49,7 +49,7 @@
 
         <li class="relative group">
           <a class="hover:underline cursor-pointer" href="iPad.html">iPad</a>
-          <ul class="absolute left-0 mt-2 hidden group-hover:flex flex-col bg-white border rounded-md shadow-md text-black w-40 z-10 transition-all duration-200">
+          <ul class="absolute left-0 hidden group-hover:flex flex-col bg-white border rounded-md shadow-md text-black w-40 z-10 transition-all duration-200">
             <li><a href="iPad.html#iPadPro" class="block px-4 py-2 hover:bg-gray-100">iPad Pro </a></li>
             <li><a href="iPad.html#iPadAir" class="block px-4 py-2 hover:bg-gray-100">iPad Air</a></li>
             <li><a href="iPad.html#iPadMini" class="block px-4 py-2 hover:bg-gray-100">iPad Mini</a></li>
@@ -59,7 +59,7 @@
 
         <li class="group relative">
           <a class="hover:underline cursor-pointer" href="iPhone.html">iPhone</a>
-          <ul class="absolute left-0 mt-2 hidden group-hover:flex flex-col bg-white border rounded-md shadow-md text-black w-40 z-10 transition-all duration-200">
+          <ul class="absolute left-0 hidden group-hover:flex flex-col bg-white border rounded-md shadow-md text-black w-40 z-10 transition-all duration-200">
             <li><a href="iPhone.html#iPhone15" class="block px-4 py-2 hover:bg-gray-100">iPhone 15</a></li>
             <li><a href="iPhone.html#iPhone14" class="block px-4 py-2 hover:bg-gray-100">iPhone 14</a></li>
             <li><a href="iPhone.html#iPhone13" class="block px-4 py-2 hover:bg-gray-100">iPhone 13</a></li>
@@ -70,7 +70,7 @@
 
         <li class="group relative">
           <a class="hover:underline cursor-pointer" href="Watch.html">Watch</a>
-          <ul class="absolute left-0 mt-2 hidden group-hover:flex flex-col bg-white border rounded-md shadow-md text-black w-40 z-10 transition-all duration-200">
+          <ul class="absolute left-0 hidden group-hover:flex flex-col bg-white border rounded-md shadow-md text-black w-40 z-10 transition-all duration-200">
             <li><a href="Watch.html#WatchSeries" class="block px-4 py-2 hover:bg-gray-100">Apple Watch Series</a></li>
             <li><a href="Watch.html#WatchSE" class="block px-4 py-2 hover:bg-gray-100">Apple Watch SE</a></li>
             <li><a href="Watch.html#WatchUltra" class="block px-4 py-2 hover:bg-gray-100">Apple Watch Ultra</a></li>
@@ -79,7 +79,7 @@
 
         <li class="group relative">
           <a class="hover:underline cursor-pointer" href="AirPods.html">AirPods</a>
-          <ul class="absolute left-0 mt-2 hidden group-hover:flex flex-col bg-white border rounded-md shadow-md text-black w-40 z-10 transition-all duration-200">
+          <ul class="absolute left-0 hidden group-hover:flex flex-col bg-white border rounded-md shadow-md text-black w-40 z-10 transition-all duration-200">
             <li><a href="AirPods.html#AirPods" class="block px-4 py-2 hover:bg-gray-100">AirPods</a></li>
             <li><a href="AirPods.html#AirPodsPro" class="block px-4 py-2 hover:bg-gray-100">AirPods Pro</a></li>
             <li><a href="AirPods.html#AirPodsMax" class="block px-4 py-2 hover:bg-gray-100">AirPods Max</a></li>
@@ -250,40 +250,50 @@
         <h2 class="text-xl font-semibold text-gray-600 text-left mb-6">Những bài nhạc hot trend.</h2>
         <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-5 gap-6 text-center">
           <!-- Card 1 -->
-          <div class="flex justify-center">
+          <a href="nhac2.html">
+            <div class="flex justify-center">
             <div class="w-full max-w-[200px] h-[220px] bg-white rounded-lg shadow-lg overflow-hidden">
-              <img src="Image/music1.jpg" alt="Music" class="w-full h-full object-cover">
+              <img src="Image/music/music1.jpg" alt="Music" class="w-full h-full object-cover">
             </div>
           </div>
+          </a>
 
           <!-- Card 2 -->
-          <div class="flex justify-center">
-            <div class="w-full max-w-[200px] h-[220px] bg-white rounded-lg shadow-lg overflow-hidden">
-              <img src="Image/music2.jpg" alt="Music" class="w-full h-full object-cover">
+           <a href="nhac3.html">
+            <div class="flex justify-center">
+              <div class="w-full max-w-[200px] h-[220px] bg-white rounded-lg shadow-lg overflow-hidden">
+                <img src="Image/music/music2.jpg" alt="Music" class="w-full h-full object-cover">
+              </div>
             </div>
-          </div>
+          </a>
 
           <!-- Card 3 -->
-          <div class="relative w-full max-w-[200px] h-[220px] bg-white rounded-lg shadow-lg overflow-hidden">
-            <span class="absolute top-0 left-0 bg-red-500 text-white text-xs font-semibold px-2 py-1 rounded-br-lg z-10">
-              Mới ra mắt
-            </span>
-            <img src="Image/music3.jpg" alt="Music" class="w-full h-full object-cover">
-          </div>
+           <a href="nhac4.html">
+            <div class="relative w-full max-w-[200px] h-[220px] bg-white rounded-lg shadow-lg overflow-hidden">
+              <span class="absolute top-0 left-0 bg-red-500 text-white text-xs font-semibold px-2 py-1 rounded-br-lg z-10">
+                Mới ra mắt
+              </span>
+              <img src="Image/music/music3.jpg" alt="Music" class="w-full h-full object-cover">
+            </div>
+          </a>
 
           <!-- Card 4 -->
-          <div class="flex justify-center">
-            <div class="w-full max-w-[200px] h-[220px] bg-white rounded-lg shadow-lg overflow-hidden">
-              <img src="Image/music4.jpg" alt="Music" class="w-full h-full object-cover">
+           <a href="nhac5.html">
+            <div class="flex justify-center">
+              <div class="w-full max-w-[200px] h-[220px] bg-white rounded-lg shadow-lg overflow-hidden">
+                <img src="Image/music/music4.jpg" alt="Music" class="w-full h-full object-cover">
+              </div>
             </div>
-          </div>
+           </a>
 
           <!-- Card 5 -->
-          <div class="flex justify-center">
+          <a href="nhac1.html">
+            <div class="flex justify-center">
             <div class="w-full max-w-[200px] h-[220px] bg-white rounded-lg shadow-lg overflow-hidden">
-              <img src="Image/music5.jpg" alt="Music" class="w-full h-full object-cover">
+              <img src="Image/music/music5.jpg" alt="Music" class="w-full h-full object-cover">
             </div>
           </div>
+          </a>
         </div>
       </section>
 
