--- a/frontend/Mac.html
+++ b/frontend/Mac.html
@@ -68,7 +68,7 @@
         <li><a class="hover:underline" href="Main.html">Cửa Hàng</a></li>
         <li class="relative group">
           <a class="hover:underline cursor-pointer" href="Mac.html">Mac</a>
-          <ul class="absolute left-0 mt-2 hidden group-hover:flex flex-col bg-white border rounded-md shadow-md text-black w-40 z-10 transition-all duration-200">
+          <ul class="absolute left-0 hidden group-hover:flex flex-col bg-white border rounded-md shadow-md text-black w-40 z-10 transition-all duration-200">
             <li><a href="Mac.html#MacbookAir" class="block px-4 py-2 hover:bg-gray-100">Macbook Air</a></li>
             <li><a href="Mac.html#MacbookPro" class="block px-4 py-2 hover:bg-gray-100">Macbook Pro</a></li>
           </ul> 
@@ -76,7 +76,7 @@
 
         <li class="relative group">
           <a class="hover:underline cursor-pointer" href="iPad.html">iPad</a>
-          <ul class="absolute left-0 mt-2 hidden group-hover:flex flex-col bg-white border rounded-md shadow-md text-black w-40 z-10 transition-all duration-200">
+          <ul class="absolute left-0 hidden group-hover:flex flex-col bg-white border rounded-md shadow-md text-black w-40 z-10 transition-all duration-200">
             <li><a href="iPad.html#iPadPro" class="block px-4 py-2 hover:bg-gray-100">iPad Pro </a></li>
             <li><a href="iPad.html#iPadAir" class="block px-4 py-2 hover:bg-gray-100">iPad Air</a></li>
             <li><a href="iPad.html#iPadMini" class="block px-4 py-2 hover:bg-gray-100">iPad Mini</a></li>
@@ -86,7 +86,7 @@
 
         <li class="group relative">
           <a class="hover:underline cursor-pointer" href="iPhone.html">iPhone</a>
-          <ul class="absolute left-0 mt-2 hidden group-hover:flex flex-col bg-white border rounded-md shadow-md text-black w-40 z-10 transition-all duration-200">
+          <ul class="absolute left-0 hidden group-hover:flex flex-col bg-white border rounded-md shadow-md text-black w-40 z-10 transition-all duration-200">
             <li><a href="iPhone.html#iPhone15" class="block px-4 py-2 hover:bg-gray-100">iPhone 15</a></li>
             <li><a href="iPhone.html#iPhone14" class="block px-4 py-2 hover:bg-gray-100">iPhone 14</a></li>
             <li><a href="iPhone.html#iPhone13" class="block px-4 py-2 hover:bg-gray-100">iPhone 13</a></li>
@@ -97,7 +97,7 @@
 
         <li class="group relative">
           <a class="hover:underline cursor-pointer" href="Watch.html">Watch</a>
-          <ul class="absolute left-0 mt-2 hidden group-hover:flex flex-col bg-white border rounded-md shadow-md text-black w-40 z-10 transition-all duration-200">
+          <ul class="absolute left-0 hidden group-hover:flex flex-col bg-white border rounded-md shadow-md text-black w-40 z-10 transition-all duration-200">
             <li><a href="Watch.html#WatchSeries" class="block px-4 py-2 hover:bg-gray-100">Apple Watch Series</a></li>
             <li><a href="Watch.html#WatchSE" class="block px-4 py-2 hover:bg-gray-100">Apple Watch SE</a></li>
             <li><a href="Watch.html#WatchUltra" class="block px-4 py-2 hover:bg-gray-100">Apple Watch Ultra</a></li>
@@ -106,7 +106,7 @@
 
         <li class="group relative">
           <a class="hover:underline cursor-pointer" href="AirPods.html">AirPods</a>
-          <ul class="absolute left-0 mt-2 hidden group-hover:flex flex-col bg-white border rounded-md shadow-md text-black w-40 z-10 transition-all duration-200">
+          <ul class="absolute left-0 hidden group-hover:flex flex-col bg-white border rounded-md shadow-md text-black w-40 z-10 transition-all duration-200">
             <li><a href="AirPods.html#AirPods" class="block px-4 py-2 hover:bg-gray-100">AirPods</a></li>
             <li><a href="AirPods.html#AirPodsPro" class="block px-4 py-2 hover:bg-gray-100">AirPods Pro</a></li>
             <li><a href="AirPods.html#AirPodsMax" class="block px-4 py-2 hover:bg-gray-100">AirPods Max</a></li>
@@ -255,11 +255,11 @@
         <section class="max-w-[1200px] mx-auto px-4 py-8">
         <div class="header-section flex items-center justify-between">
           <h1 class="text-3xl font-bold mb-6">Khám phá sản phẩm Mac.</h1>
-          <div class="button-group flex space-x-4">
+          <!-- <div class="button-group flex space-x-4">
             <button id="btnAdd" class="px-4 py-2 rounded-full bg-gray-100 text-lg text-gray-800 font-medium hover:bg-red-200 transition">Thêm</button>
             <button id="btnOpenEdit" class="px-4 py-2 rounded-full bg-gray-100 text-lg text-gray-800 font-medium hover:bg-yellow-200 transition">Sửa</button>
             <button id="btnOpenDelete" class="px-4 py-2 rounded-full bg-gray-100 text-lg text-gray-800 font-medium hover:bg-green-200 transition">Xóa</button>
-          </div>
+          </div> -->
         </div>
 
         <!-- Nút Thêm -->
