--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -65,7 +65,7 @@
         <!-- Logo -->
         <li>
           <a class="flex items-center" href="trangchu.html">
-            <img alt="Apple logo black" class="block" height="45" src="Image/logo.webp" width="41" />
+            <img alt="Apple logo black" class="block" height="45" src="Image/logo.png" width="41" />
           </a>
         </li>
 
